[package]
name = "bokeh-creator"
version = "0.1.6"
edition = "2024"
license = "EUPL-1.2"
readme = "README.md"
authors = ["Gilles Vink <gillesvink@noreply.codeberg.org>"]
description = "Easy to use library to replicate real world lens kernels"
repository = "https://codeberg.org/gillesvink/bokeh-creator"
documentation = "https://docs.rs/bokeh-creator"
keywords = ["bokeh", "camera", "photography", "lens", "convolution"]
categories = ["algorithms", "multimedia", "graphics"]

[features]
default = ["image", "noise"]
libm = ["glam/libm"]
noise = ["dep:libnoise", "std"]
image = ["dep:image", "std", "image-ndarray/image"]
std = ["ndarray/std", "glam/default"]
serde = ["dep:serde"]
compile-protobuf-src = ["dep:protobuf-src"]


[dependencies]
libnoise = { version = "1.1", default-features = false, optional = true }
glam = { version = "0.30", default-features = false }
ndarray = { version = "0.16", default-features = false }
image = { version = "0.25", optional = true, default-features = false }
image-ndarray = { version = "0.1.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
prost = { version = "0.14" }
prost-types = { version = "0.14"}
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
assert_approx_eq = ">= 1.1.0, < 1.2"
image = ">=0.25.0, < 0.26"
image-compare = ">=0.4.1, < 0.5"
image-ndarray = "0.1.2"
rstest = ">=0.25.0, < 0.26"

[build-dependencies]
prost-build = "0.14.1"
protobuf-src = { version = "2.1.1", optional = true }
