[package]
name = "bokeh-creator"
version = "0.1.15"
edition = "2024"
license = "EUPL-1.2"
readme = "README.md"
authors = ["Gilles Vink <gillesvink@noreply.codeberg.org>"]
description = "Easy to use library to replicate real world lens kernels"
repository = "https://codeberg.org/gillesvink/bokeh-creator"
documentation = "https://docs.rs/bokeh-creator"
keywords = ["bokeh", "camera", "photography", "lens", "convolution"]
categories = ["algorithms", "multimedia", "graphics"]

[features]
default = ["image", "noise"]
renderer = ["dep:ndarray", "std", "dep:glam"]
noise = ["dep:libnoise", "std"]
image = ["dep:image", "std", "dep:image-ndarray"]
std = ["ndarray/std", "glam/default", "renderer", "prost/std", "prost-types/std"]
serde = ["dep:serde", "prost/derive"]
compile-protobuf-src = ["dep:protobuf-src"]
documented = ["dep:documented"]



[dependencies]
libnoise = { version = "1.1", default-features = false, optional = true }
glam = { version = "0.30", default-features = false, optional = true}
ndarray = { version = "0.16", default-features = false, optional = true}
image = { version = "0.25", optional = true, default-features = false }
image-ndarray = { version = "0.1.5", features = ["image"], optional = true}
num-traits = { version = "0.2", default-features = false }
prost = { version = "0.14", default-features = false}
prost-types = { version = "0.14", default-features = false}
serde = { version = "1.0", features = ["derive"], optional = true}
documented = {version = "0.9", optional = true}

[dev-dependencies]
assert_approx_eq = ">= 1.1.0, < 1.2"
image = ">=0.25.0, < 0.26"
image-compare = ">=0.4.1, < 0.5"
image-ndarray = "0.1.2"
rstest = ">=0.25.0, < 0.26"

[build-dependencies]
prost-build = "0.14.1"
protobuf-src = { version = "2.1.1", optional = true }
